--- a/data/AnDohyun-CV.tex
+++ b/data/AnDohyun-CV.tex
@@ -219,12 +219,12 @@
 
     \section{Awards}
         \begin{twocolentry}{
-            Aug 2023
+            Aug 2024
         }
-            \textbf{High Honors} (Yonsei University)
+            \textbf{The Highest Honors} (Yonsei University)
         \end{twocolentry}
         \begin{highlights}
-            \item GPA: 4.25/4.3 (Top 4 in College of Computing)
+            \item GPA: 4.25/4.3 (Top 1 in Dept. of Artificial Intelligence)
         \end{highlights}
         \vspace{0.10 cm}
         \begin{twocolentry}{
@@ -237,19 +237,22 @@
         \end{highlights}
         \vspace{0.10 cm}
         \begin{twocolentry}{
-            Aug 2024
+            Aug 2023
         }
-            \textbf{The Highest Honors} (Yonsei University)
+            \textbf{High Honors} (Yonsei University)
         \end{twocolentry}
         \begin{highlights}
-            \item GPA: 4.25/4.3 (Top 1 in Dept. of Artificial Intelligence)
+            \item GPA: 4.25/4.3 (Top 4 in College of Computing)
         \end{highlights}
         \vspace{0.10 cm}
 
     \section{Research Interest}
         \begin{onecolentry}
             \begin{highlights}
-                \item \textbf{AI-based assistants and chatbots, such as ChatGPT (transformer models)}
+                \item \textbf{AI-based assistants and chatbots, such as ChatGPT}
+                \begin{itemize}
+                    \item generative AI (e.g. transformer)
+                \end{itemize}
                 \item Deep learning
                 \item Computer vision
             \end{highlights}
