pdf file update

--- a/data/AnDohyun-CV.tex
+++ b/data/AnDohyun-CV.tex
@@ -19,8 +19,8 @@
 \usepackage{fontawesome5} % for using icons
 \usepackage{amsmath} % for math
 \usepackage[
-    pdftitle={An Dohyun's CV},
-    pdfauthor={An Dohyun},
+    pdftitle={Dohyun An's CV},
+    pdfauthor={Dohyun An},
     pdfcreator={LaTeX with RenderCV},
     colorlinks=true,
     urlcolor=primaryColor
@@ -140,7 +140,7 @@
         \LenToUnit{\paperwidth-2 cm-0 cm+0.05cm},
         \LenToUnit{\paperheight-1.0 cm}
     ){\vtop{{\null}\makebox[0pt][c]{
-        \small\color{gray}\textit{Last updated in September 2024}\hspace{\widthof{Last updated in September 2024}}
+        \small\color{gray}\textit{Last updated in October 2024}\hspace{\widthof{Last updated in October 2024}}
     }}}%
   }%
 }%
