Github link & CV update

--- a/data/AnDohyun-CV.tex
+++ b/data/AnDohyun-CV.tex
@@ -251,7 +251,7 @@
             \begin{highlights}
                 \item \textbf{AI-based assistants and chatbots, such as ChatGPT}
                 \begin{itemize}
-                    \item generative AI (e.g. transformer)
+                    \item generative models (e.g. transformer)
                 \end{itemize}
                 \item Deep learning
                 \item Computer vision
